# tg4perfetto

./: README.md  pyproject.toml
src/tg4perfetto/: __init__.py  _core.py  _profile.py  _tgen.py  example.py  example_profile.py  perfetto_trace_pb2.py
